<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="how_to_play">How to play:</string>
    <string name="click_the_buttons_to_color_the_boxes">Click the buttons to color the boxes</string>
</resources>